--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "enzyme-adapter-react-16": "^1.7.1",
     "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
@@ -31,13 +33,23 @@
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
     "react-loadable": "^5.5.0",
+    "react-redux": "^6.0.0",
+    "react-router": "^4.3.1",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-test-renderer": "^16.7.0",
+    "react-widgets": "^4.4.9",
     "reactstrap": "^7.0.2",
+    "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
+    "redux-localstorage": "^0.4.1",
+    "redux-promise-middleware": "^5.1.1",
+    "redux-thunk": "^2.3.0",
     "simple-line-icons": "^2.4.1"
   },
   "devDependencies": {
+    "axios": "^0.18.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
